Fix footer spacing

--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -7,6 +7,7 @@ footer {
     margin: 0;
     flex-direction: column;
     justify-content: end;
+    gap: 1rem;
     align-items: center;
 }
 
